--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,35 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    padding: 20px;
-}
-h1 {
-    text-align: center;
-}
-ul {
-    list-style-type: none;
+    margin: 0;
     padding: 0;
+    background-image: url(../img/hatter.jpg); 
+    background-size: cover; 
+    background-position: center; 
+    font-family: Arial, sans-serif; 
+    color: white; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    height: 100vh; 
+    text-align: center; 
 }
+
+ul {
+    list-style: none; 
+    padding: 20px; 
+}
+
 li {
-    margin: 10px 0;
+    margin: 20px 0; 
+    display: flex; 
+    align-items: center; 
 }
+
 a {
-    text-decoration: none;
-    color: #3498db;
+    text-decoration: none; 
+    color: white; 
+    transition: transform 0.3s; 
 }
+
 a:hover {
-    text-decoration: underline;
+    transform: scale(1.2); 
 }
